force-app/main/default/objects/Case/fields/Patient_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Patient_Outcome__c</fullName>
    <label>Patient Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful Discharge</fullName>
            </value>
            <value>
                <fullName>Unsuccessful Discharge</fullName>
            </value>
            <value>
                <fullName>Disruption</fullName>
            </value>
            <value>
                <fullName>Referred out</fullName>
            </value>
            <value>
                <fullName>Referred in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>