force-app/main/default/objects/Case/fields/People_Incorporated_Program_Ref_From__c.field-meta.xml
<CustomField>
    <fullName>People_Incorporated_Program_Ref_From__c</fullName>
    <label>People Incorporated Program Ref From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AACT</fullName>
            </value>
            <value>
                <fullName>AHRMS</fullName>
            </value>
            <value>
                <fullName>BHH</fullName>
            </value>
            <value>
                <fullName>CIS</fullName>
            </value>
            <value>
                <fullName>Crisis</fullName>
            </value>
            <value>
                <fullName>CTCM</fullName>
            </value>
            <value>
                <fullName>CTSS</fullName>
            </value>
            <value>
                <fullName>Day Treatment</fullName>
            </value>
            <value>
                <fullName>Depression Care Pathway</fullName>
            </value>
            <value>
                <fullName>DHHS</fullName>
            </value>
            <value>
                <fullName>IRTS</fullName>
            </value>
            <value>
                <fullName>MISUD</fullName>
            </value>
            <value>
                <fullName>OMH</fullName>
            </value>
            <value>
                <fullName>OMH No Show Report</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>SBMH</fullName>
            </value>
            <value>
                <fullName>WCM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>