force-app/main/default/objects/Case/fields/Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name__c</fullName>
    <formula>Contact.Preferred_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Name</label>
    <type>Text</type>
</CustomField>