force-app/main/default/objects/Case/fields/Program_Accepted_To__c.field-meta.xml
<CustomField>
    <fullName>Program_Accepted_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program Accepted To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Program Accepted To)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>