force-app/main/default/objects/Case/fields/Pronouns__c.field-meta.xml
<CustomField>
    <fullName>Pronouns__c</fullName>
    <label>Pronouns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>He/Him/His</fullName>
            </value>
            <value>
                <fullName>He/Him/They/Them</fullName>
            </value>
            <value>
                <fullName>She/Her/Hers</fullName>
            </value>
            <value>
                <fullName>She/Her/They/Them</fullName>
            </value>
            <value>
                <fullName>They/Them/Theirs</fullName>
            </value>
            <value>
                <fullName>Ze/Zir</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>