force-app/main/default/objects/Case/fields/Reengagement__c.field-meta.xml
<CustomField>
    <fullName>Reengagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reengagement</label>
    <type>Checkbox</type>
</CustomField>