force-app/main/default/objects/Case/fields/Ref_Organization__c.field-meta.xml
<CustomField>
    <fullName>Ref_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Referral Organization)</relationshipLabel>
    <relationshipName>ReferralOrganization</relationshipName>
    <type>Lookup</type>
</CustomField>