force-app/main/default/objects/Case/fields/Ref_Organization_Contact__c.field-meta.xml
<CustomField>
    <fullName>Ref_Organization_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Organization Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Referral Organization Contact)</relationshipLabel>
    <relationshipName>ReferralOrganizationContact</relationshipName>
    <type>Lookup</type>
</CustomField>