force-app/main/default/objects/Case/fields/Referent_Name__c.field-meta.xml
<CustomField>
    <fullName>Referent_Name__c</fullName>
    <label>Referent Name</label>
    <type>TextArea</type>
</CustomField>