force-app/main/default/objects/Case/fields/Referent_Phone__c.field-meta.xml
<CustomField>
    <fullName>Referent_Phone__c</fullName>
    <label>Referent Phone</label>
    <type>Phone</type>
</CustomField>