force-app/main/default/objects/Case/fields/Referent_Role__c.field-meta.xml
<CustomField>
    <fullName>Referent_Role__c</fullName>
    <label>Referent Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>School Social Worker</fullName>
            </value>
            <value>
                <fullName>Crisis Program</fullName>
            </value>
            <value>
                <fullName>Student/Family Member</fullName>
            </value>
            <value>
                <fullName>School Administrator</fullName>
            </value>
            <value>
                <fullName>School-Based Health Center or Clinic (Nurse)</fullName>
            </value>
            <value>
                <fullName>School Psychologist</fullName>
            </value>
            <value>
                <fullName>General Ed Teacher</fullName>
            </value>
            <value>
                <fullName>MH Care Provider</fullName>
            </value>
            <value>
                <fullName>Special Ed Teacher</fullName>
            </value>
            <value>
                <fullName>County Staff (P.O./C.M.)</fullName>
            </value>
            <value>
                <fullName>School Counselor</fullName>
            </value>
            <value>
                <fullName>Primary Care Provider</fullName>
            </value>
            <value>
                <fullName>Student Support Team</fullName>
            </value>
            <value>
                <fullName>Home School Liaison/Parent Liaison</fullName>
            </value>
            <value>
                <fullName>Parent/Guardian</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>