force-app/main/default/objects/Case/fields/Referral_Notes__c.field-meta.xml
<CustomField>
    <fullName>Referral_Notes__c</fullName>
    <label>Referral Notes</label>
    <type>TextArea</type>
</CustomField>