force-app/main/default/objects/Case/fields/Referral_Reason__c.field-meta.xml
<CustomField>
    <fullName>Referral_Reason__c</fullName>
    <label>Referral Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADHD</fullName>
            </value>
            <value>
                <fullName>Adjustment Issue</fullName>
            </value>
            <value>
                <fullName>Anxiety</fullName>
            </value>
            <value>
                <fullName>Autism Spectrum</fullName>
            </value>
            <value>
                <fullName>Bipolar</fullName>
            </value>
            <value>
                <fullName>Depression</fullName>
            </value>
            <value>
                <fullName>Disruptive Behavior</fullName>
            </value>
            <value>
                <fullName>Eating Disorder</fullName>
            </value>
            <value>
                <fullName>Mania</fullName>
            </value>
            <value>
                <fullName>Psychosis</fullName>
            </value>
            <value>
                <fullName>Relationship Problems (Family)</fullName>
            </value>
            <value>
                <fullName>Relationship Problems (Friends)</fullName>
            </value>
            <value>
                <fullName>Substance Use</fullName>
            </value>
            <value>
                <fullName>Trauma (Abuse and Neglect)</fullName>
            </value>
            <value>
                <fullName>Trauma (Other)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>