force-app/main/default/objects/Case/fields/Referred_To__c.field-meta.xml
<CustomField>
    <fullName>Referred_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred To Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Referred To Organization)</relationshipLabel>
    <relationshipName>ReferredTo</relationshipName>
    <type>Lookup</type>
</CustomField>