force-app/main/default/objects/Case/fields/Referred_to_Program__c.field-meta.xml
<CustomField>
    <fullName>Referred_to_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred to Program</label>
    <referenceTo>Client_Program__c</referenceTo>
    <relationshipLabel>Cases (Referred to Program)</relationshipLabel>
    <relationshipName>ReferredToProgram</relationshipName>
    <type>Lookup</type>
</CustomField>