force-app/main/default/objects/Case/fields/Rep_Payee__c.field-meta.xml
<CustomField>
    <fullName>Rep_Payee__c</fullName>
    <label>Rep Payee</label>
    <length>24</length>
    <type>Text</type>
</CustomField>