force-app/main/default/objects/Case/fields/Rep_Payee_Phone__c.field-meta.xml
<CustomField>
    <fullName>Rep_Payee_Phone__c</fullName>
    <label>Rep Payee Phone</label>
    <type>Phone</type>
</CustomField>