force-app/main/default/objects/Case/fields/Second_Parent_Guardian__c.field-meta.xml
<CustomField>
    <fullName>Second_Parent_Guardian__c</fullName>
    <formula>Contact.Second_Parent_Guardian__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Second Parent/Guardian</label>
    <type>Text</type>
</CustomField>