force-app/main/default/objects/Case/fields/Second_Parent_Guardian_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Second_Parent_Guardian_Last_Name__c</fullName>
    <label>Second Parent/Guardian Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>