force-app/main/default/objects/Case/fields/Send_Intake_Paperwork_To__c.field-meta.xml
<CustomField>
    <fullName>Send_Intake_Paperwork_To__c</fullName>
    <label>Send Intake Paperwork To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent/Guardian</fullName>
            </value>
            <value>
                <fullName>Second Parent/Guardian</fullName>
            </value>
            <value>
                <fullName>Both Parents/Guardians</fullName>
            </value>
            <value>
                <fullName>Other (Describe in notes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>