force-app/main/default/objects/Case/fields/Skills_Requested__c.field-meta.xml
<CustomField>
    <fullName>Skills_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skills Requested</label>
    <type>Checkbox</type>
</CustomField>