force-app/main/default/objects/Case/fields/Skills_Worker__c.field-meta.xml
<CustomField>
    <fullName>Skills_Worker__c</fullName>
    <label>Skills Worker</label>
    <length>80</length>
    <type>Text</type>
</CustomField>