force-app/main/default/objects/Case/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <formula>Contact.SSN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SSN</label>
    <type>Text</type>
</CustomField>