force-app/main/default/objects/Case/fields/TCL__c.field-meta.xml
<CustomField>
    <fullName>TCL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TCL</label>
    <type>Checkbox</type>
</CustomField>