force-app/main/default/objects/Case/fields/Therapist__c.field-meta.xml
<CustomField>
    <fullName>Therapist__c</fullName>
    <label>Therapist</label>
    <type>TextArea</type>
</CustomField>