force-app/main/default/objects/Case/fields/Type_of_Assistance_Needed__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Assistance_Needed__c</fullName>
    <label>Type of Assistance Needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Community Connections</fullName>
            </value>
            <value>
                <fullName>Food/Basic Needs</fullName>
            </value>
            <value>
                <fullName>Health &amp; Wellness</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Work &amp; School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>