force-app/main/default/objects/Case/fields/Waitlist_Date__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Date__c</fullName>
    <label>Waitlist Date</label>
    <type>Date</type>
</CustomField>