force-app/main/default/objects/Case/fields/Warnings__c.field-meta.xml
<CustomField>
    <fullName>Warnings__c</fullName>
    <label>Warnings</label>
    <type>TextArea</type>
</CustomField>