force-app/main/default/objects/Case/fields/Watchlist__c.field-meta.xml
<CustomField>
    <fullName>Watchlist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Watchlist</label>
    <type>Checkbox</type>
</CustomField>