force-app/main/default/objects/Case/recordTypes/ARMHS.recordType-meta.xml
<RecordType>
    <fullName>ARMHS</fullName>
    <active>true</active>
    <businessProcess>ARMHS</businessProcess>
    <label>ARMHS</label>
</RecordType>