force-app/main/default/objects/Case/recordTypes/Care_Coordination.recordType-meta.xml
<RecordType>
    <fullName>Care_Coordination</fullName>
    <active>true</active>
    <businessProcess>Care Coordination</businessProcess>
    <label>Care Coordination</label>
</RecordType>