force-app/main/default/objects/Case/recordTypes/Care_Coordination_Community_Connections.recordType-meta.xml
<RecordType>
    <fullName>Care_Coordination_Community_Connections</fullName>
    <active>false</active>
    <businessProcess>Care Coordination</businessProcess>
    <label>Care Coordination Community Connections</label>
</RecordType>