force-app/main/default/objects/Case/recordTypes/Community_Connections.recordType-meta.xml
<RecordType>
    <fullName>Community_Connections</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Community Connections</label>
</RecordType>