force-app/main/default/objects/Case/recordTypes/Crisis.recordType-meta.xml
<RecordType>
    <fullName>Crisis</fullName>
    <active>true</active>
    <businessProcess>Crisis</businessProcess>
    <label>Crisis</label>
</RecordType>