force-app/main/default/objects/Case/recordTypes/Food_Basic_Needs.recordType-meta.xml
<RecordType>
    <fullName>Food_Basic_Needs</fullName>
    <active>false</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Care Coordination Food/Basic Needs</label>
</RecordType>