force-app/main/default/objects/Case/recordTypes/Groups.recordType-meta.xml
<RecordType>
    <fullName>Groups</fullName>
    <active>true</active>
    <businessProcess>Groups</businessProcess>
    <label>Groups</label>
</RecordType>