force-app/main/default/objects/Case/recordTypes/Health_and_Wellness.recordType-meta.xml
<RecordType>
    <fullName>Health_and_Wellness</fullName>
    <active>false</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Care Coordination Health and Wellness</label>
</RecordType>