force-app/main/default/objects/Case/recordTypes/Housing.recordType-meta.xml
<RecordType>
    <fullName>Housing</fullName>
    <active>false</active>
    <businessProcess>Care Coordination</businessProcess>
    <label>Care Coordination Housing</label>
</RecordType>