force-app/main/default/objects/Case/recordTypes/IRTS.recordType-meta.xml
<RecordType>
    <fullName>IRTS</fullName>
    <active>true</active>
    <businessProcess>IRTS</businessProcess>
    <label>IRTS</label>
</RecordType>