force-app/main/default/objects/Case/recordTypes/Long_Term_Residential.recordType-meta.xml
<RecordType>
    <fullName>Long_Term_Residential</fullName>
    <active>true</active>
    <businessProcess>Long Term Residential</businessProcess>
    <label>Long Term Residential</label>
</RecordType>