force-app/main/default/objects/Case/recordTypes/Safety.recordType-meta.xml
<RecordType>
    <fullName>Safety</fullName>
    <active>false</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Care Coordination Safety</label>
</RecordType>