force-app/main/default/objects/Case/recordTypes/School_Based.recordType-meta.xml
<RecordType>
    <fullName>School_Based</fullName>
    <active>true</active>
    <businessProcess>School Based</businessProcess>
    <label>School Based</label>
</RecordType>