force-app/main/default/objects/Case/recordTypes/Skills.recordType-meta.xml
<RecordType>
    <fullName>Skills</fullName>
    <active>true</active>
    <businessProcess>Skills</businessProcess>
    <label>Skills</label>
</RecordType>