force-app/main/default/objects/Case/recordTypes/Transportation.recordType-meta.xml
<RecordType>
    <fullName>Transportation</fullName>
    <active>false</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Care Coordination Transportation</label>
</RecordType>