force-app/main/default/objects/Case/recordTypes/Work.recordType-meta.xml
<RecordType>
    <fullName>Work</fullName>
    <active>false</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Work</label>
</RecordType>