force-app/main/default/objects/Case/recordTypes/Work_and_School.recordType-meta.xml
<RecordType>
    <fullName>Work_and_School</fullName>
    <active>false</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Care Coordination Work and School</label>
</RecordType>