force-app/main/default/objects/Case/validationRules/Other_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Closed_Reason__c, &quot;Other&quot;), ISBLANK(Other_Reason__c))</errorConditionFormula>
    <errorMessage>Please provide an Other Reason before marking referral closed.</errorMessage>
</ValidationRule>