force-app/main/default/objects/Case/listViews/ARMHS_Referral_Queue_Case.listView-meta.xml
<ListView>
    <fullName>ARMHS_Referral_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>ARMHS Referral Queue</label>
    <queue>ARMHS_Referral_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>