force-app/main/default/objects/Case/listViews/Care_Coordination_ARMHS_Case.listView-meta.xml
<ListView>
    <fullName>Care_Coordination_ARMHS_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Care Coordination ARMHS</label>
    <queue>Care_Coordination_ARMHS</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>