force-app/main/default/objects/Case/listViews/Lead_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Lead_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Lead Queue</label>
    <queue>Lead_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>