force-app/main/default/objects/Case/listViews/LTH_New_Referral_Queue_Case.listView-meta.xml
<ListView>
    <fullName>LTH_New_Referral_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>LTH New Referral Queue</label>
    <queue>LTH_New_Referral_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>